--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-flow-renderer": "^10.3.17",
-    "reactflow": "^11.11.4"
+    "react-router-dom": "^6.27.0",
+    "reactflow": "^11.11.4",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
